[package]
name = "gust"
version = "0.1.0"
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.3"
deflate = "1.0.0"
flate2 = "1.0.22"
bstr = "1.2.0"
anyhow = "1.0.69"
thiserror = "1.0.38"
spdlog-rs = "0.3.7"
byteorder = "1.4.3"
sha-1 = "0.10.1"
imara-diff = "0.1.5"
min-max = "0.1"
colored = "2.0.0"
crc = "3.0.0"
diffs = "0.4.1"
tokio = { version = "1.24.1", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }
axum = "0.6.4"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs"] }
tower-cookies = "0.8.0"
dotenvy = "0.15.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bytes = "1.1.0"
futures = "0.3.26"
dirs = "4.0.0"
clap = { version = "4.1.4", features = ["derive"] }
sea-orm = { version = "0.10.7", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
async-trait = "0.1.64"
