[package]
name = "gust"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.3"
deflate = "1.0.0"
flate2 = "1.0.22"
bstr = "1.2.0"
anyhow = "1.0.69"
thiserror = "1.0.38"
spdlog-rs = "0.3.7"
byteorder = "1.4.3"
sha-1 = "0.10.1"
imara-diff = "0.1.5"
min-max = "0.1"
colored = "2.0.0"
crc = "3.0.0"
diffs = "0.4.1"
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
axum = "0.6.16"
dotenvy = "0.15.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bytes = "1.4.0"
futures = "0.3.28"
dirs = "4.0.0"
clap = { version = "4.2.4", features = ["derive"] }
sea-orm = { version = "0.11.2", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
async-trait = "0.1.68"
chrono = "0.4.23"
lru = "0.9.0"
idgenerator = "2.0.0"
russh = "0.37.1"
russh-keys = "0.37.1"
ed25519-dalek = "1.0.1"
async-recursion = "1.0.4"
tokio-test = "0.4.2"
