[package]
name = "gust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity"]

[profile.release]
debug = true

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.3"
deflate = "1.0.0"
flate2 = "1.0.26"
bstr = "1.2.0"
anyhow = "1.0.71"
thiserror = "1.0.38"
spdlog-rs = "0.3.7"
byteorder = "1.4.3"
sha-1 = "0.10.1"
imara-diff = "0.1.5"
min-max = "0.1"
colored = "2.0.0"
crc = "3.0.0"
diffs = "0.4.1"
tokio = { version = "1.28.1", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
axum = "0.6.18"
dotenvy = "0.15.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bytes = "1.4.0"
futures = "0.3.28"
dirs = "4.0.0"
clap = { version = "4.2.7", features = ["derive"] }
async-trait = "0.1.68"
chrono = "0.4.23"
lru = "0.9.0"
idgenerator = "2.0.0"
russh = "0.37.1"
russh-keys = "0.37.1"
ed25519-dalek = "1.0.1"
async-recursion = "1.0.4"
tokio-test = "0.4.2"
regex = "1.8.1"
rayon = "1.7.0"
entity = { path = "entity" }
rand = "0.8.5"
serde_qs = "0.12.0"
sha256 = "1.1.3"

[dependencies.sea-orm]
version = "0.11.3"
features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
]
